{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 47,
  "lineage": "e72c2941-cf73-3516-a0de-42ec98c44151",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216435170778:loadbalancer/app/my-alb/add59564ccffe639",
            "arn_suffix": "app/my-alb/add59564ccffe639",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-382247101.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:216435170778:loadbalancer/app/my-alb/add59564ccffe639",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d628c3dbcc24d6a7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01866697ec6886a7a"
              },
              {
                "subnet_id": "subnet-062d7915efe2bf3e7"
              }
            ],
            "subnets": [
              "subnet-01866697ec6886a7a",
              "subnet-062d7915efe2bf3e7"
            ],
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "my-alb",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "my-alb",
              "Owner": "Divyansh"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0885056e06351409e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216435170778:listener/app/my-alb/add59564ccffe639/6e9d0c073a217cfd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216435170778:listener/app/my-alb/add59564ccffe639/6e9d0c073a217cfd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:216435170778:loadbalancer/app/my-alb/add59564ccffe639",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-ALB",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-ALB",
              "Owner": "Divyansh"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216435170778:targetgroup/app1-20220918095516198000000007/01b8233b87e7fc48",
            "arn_suffix": "targetgroup/app1-20220918095516198000000007/01b8233b87e7fc48",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216435170778:targetgroup/app1-20220918095516198000000007/01b8233b87e7fc48",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-20220918095516198000000007",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "app1-",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "app1-",
              "Owner": "Divyansh"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:security-group/sg-0d628c3dbcc24d6a7",
            "description": "Allow port 80 and 443 from everywhere",
            "egress": [],
            "id": "sg-0d628c3dbcc24d6a7",
            "ingress": [],
            "name": "Divyansh-JGP-Prd-ALBSG-20220918095515814000000005",
            "name_prefix": "Divyansh-JGP-Prd-ALBSG-",
            "owner_id": "216435170778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-ALBSG",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-ALBSG",
              "Owner": "Divyansh"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2807580102",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d628c3dbcc24d6a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-27330492",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d628c3dbcc24d6a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1882658628",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d628c3dbcc24d6a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:security-group/sg-0378a14accb8cbc73",
            "description": "Allow port 80 and 443 from vpc CIDR",
            "egress": [],
            "id": "sg-0378a14accb8cbc73",
            "ingress": [],
            "name": "Divyansh-JGP-Prd-PrivateSG-20220918095516063400000006",
            "name_prefix": "Divyansh-JGP-Prd-PrivateSG-",
            "owner_id": "216435170778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-PrivateSG",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-PrivateSG",
              "Owner": "Divyansh"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1998613428",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0378a14accb8cbc73",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3784379625",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0378a14accb8cbc73",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2445354536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0378a14accb8cbc73",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security_group.aws_security_group.this",
            "module.private_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fa00d4c63e32376",
            "arn": "arn:aws:ec2:us-east-1:216435170778:instance/i-0f8d2442ddfa723ab",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8d2442ddfa723ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0015f601e8bfe6114",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038655b050bba86bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a967d19a6f4c236",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-BastionInstance",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-BastionInstance",
              "Owner": "Divyansh"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Divyansh-JGP-Prd-BastionInstance"
            },
            "vpc_security_group_ids": [
              "sg-05beaa36b2a7efc1f"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazonlinux2",
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:security-group/sg-05beaa36b2a7efc1f",
            "description": "Allow port 22 from internet",
            "egress": [],
            "id": "sg-05beaa36b2a7efc1f",
            "ingress": [],
            "name": "Divyansh-JGP-Prd-PublicSG-20220918095516223700000008",
            "name_prefix": "Divyansh-JGP-Prd-PublicSG-",
            "owner_id": "216435170778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-PublicSG",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-PublicSG",
              "Owner": "Divyansh"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1254660836",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05beaa36b2a7efc1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2051900158",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05beaa36b2a7efc1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security_group.aws_security_group.this",
            "module.public_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe0c88ee8571010a",
            "domain": "vpc",
            "id": "eipalloc-0fe0c88ee8571010a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-117-132.compute-1.amazonaws.com",
            "public_ip": "54.225.117.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:internet-gateway/igw-04ad33251c901e0f0",
            "id": "igw-04ad33251c901e0f0",
            "owner_id": "216435170778",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe0c88ee8571010a",
            "connectivity_type": "public",
            "id": "nat-04c8813d46f545834",
            "network_interface_id": "eni-00f295f4e3c869988",
            "private_ip": "10.0.101.248",
            "public_ip": "54.225.117.132",
            "subnet_id": "subnet-01866697ec6886a7a",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05cf6f33533d977a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04c8813d46f545834",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05cf6f33533d977a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ad33251c901e0f0",
            "id": "r-rtb-045daf9f256aeaaa71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045daf9f256aeaaa7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:route-table/rtb-06346aed17d746a7c",
            "id": "rtb-06346aed17d746a7c",
            "owner_id": "216435170778",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:route-table/rtb-05cf6f33533d977a5",
            "id": "rtb-05cf6f33533d977a5",
            "owner_id": "216435170778",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:route-table/rtb-045daf9f256aeaaa7",
            "id": "rtb-045daf9f256aeaaa7",
            "owner_id": "216435170778",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0885056e06351409e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fa788c1ef25508e",
            "route_table_id": "rtb-06346aed17d746a7c",
            "subnet_id": "subnet-0bb7e15fab1272385"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4eaaf277e43d7e",
            "route_table_id": "rtb-06346aed17d746a7c",
            "subnet_id": "subnet-03b22a643663c6536"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b9f9cf548718df",
            "route_table_id": "rtb-05cf6f33533d977a5",
            "subnet_id": "subnet-05a967d19a6f4c236"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd921dc9e014970",
            "route_table_id": "rtb-05cf6f33533d977a5",
            "subnet_id": "subnet-03263fc9b99d93e8a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ed04c62665605a",
            "route_table_id": "rtb-045daf9f256aeaaa7",
            "subnet_id": "subnet-01866697ec6886a7a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd391e55e7e45af",
            "route_table_id": "rtb-045daf9f256aeaaa7",
            "subnet_id": "subnet-062d7915efe2bf3e7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-0bb7e15fab1272385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb7e15fab1272385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Database Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Database Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-03b22a643663c6536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b22a643663c6536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Database Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Database Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-05a967d19a6f4c236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a967d19a6f4c236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Private Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Private Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-03263fc9b99d93e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03263fc9b99d93e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Private Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Private Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-01866697ec6886a7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01866697ec6886a7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Public Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Public Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:subnet/subnet-062d7915efe2bf3e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062d7915efe2bf3e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216435170778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Public Subnet"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh",
              "Type": "Public Subnet"
            },
            "vpc_id": "vpc-0885056e06351409e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216435170778:vpc/vpc-0885056e06351409e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aed28d128127b8ed",
            "default_route_table_id": "rtb-02a56c95c27e3e417",
            "default_security_group_id": "sg-00cc1b567d59cb640",
            "dhcp_options_id": "dopt-0a290577eae2aea02",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0885056e06351409e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a56c95c27e3e417",
            "owner_id": "216435170778",
            "tags": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            },
            "tags_all": {
              "Division": "JGP",
              "Environment": "Prd",
              "Name": "Divyansh-JGP-Prd-VPC",
              "Owner": "Divyansh"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}